[workspace]
members = [
    "nginx-src",
    "nginx-sys",
    "examples",
]
# cargo is not smart enough to emit resolver = "2" when publishing
# nginx-src with lower edition. We have to downgrade it globally.
#
# NOTE: this disables MSRV-aware dependency resolution.
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
homepage = "https://github.com/nginx/ngx-rust"
repository = "https://github.com/nginx/ngx-rust"
rust-version = "1.85.0"

[workspace.lints.clippy]
alloc_instead_of_core = "warn"
borrow_as_ptr = "warn"
std_instead_of_alloc = "warn"
std_instead_of_core = "warn"

[workspace.lints.rust]
rust-2024-compatibility = "warn"

[package]
name = "ngx"
version = "0.5.0"
autoexamples = false
categories = ["api-bindings", "network-programming"]
description = "FFI bindings to NGINX"
include = [
    "/build.rs",
    "/src",
    "/*.md",
    "LICENSE",
]
keywords = ["nginx", "module", "sys"]
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = []

[dependencies]
allocator-api2 = { version = "0.4.0", default-features = false, features = ["fresh-rust"] }
async-task = { version = "4.7.1", optional = true }
lock_api = "0.4.13"
nginx-sys = { path = "nginx-sys", version = "0.5.0"}
pin-project-lite = { version = "0.2.16", optional = true }

[features]
default = ["std"]
# Enables a minimal async runtime built on top of the NGINX event loop.
async = [
    "alloc",
    "dep:async-task",
    "dep:pin-project-lite",
]
# Provides APIs that require allocations via the `alloc` crate.
alloc = ["allocator-api2/alloc"]
# Enables serialization support for some of the provided and re-exported types.
serde = [
    "allocator-api2/serde",
]
# Provides APIs that require the standard library.
std = [
    "alloc",
    "allocator-api2/std"
]
# Enables the HTTP module API.
http = ["nginx-sys/http"]
# Enables the Stream module API.
stream = ["nginx-sys/stream"]
# Enables the build scripts to build a copy of nginx source and link against it.
vendored = ["nginx-sys/vendored"]

[badges]
maintenance = { status = "experimental" }

[dev-dependencies]
tempfile = { version = "3.20.0", default-features = false }

[lints]
workspace = true
